main/tmp
g++   ./src/test.cpp -L/usr/lib/python3.5/config-3.5m-x86_64-linux-gnu -L/usr/lib -lpython3.5m -lpthread -ldl  -lutil -lm  -Xlinker -export-dynamic -Wl,-O1 -Wl,-Bsymbolic-functions -I/usr/include/python3.5m -I/usr/include/python3.5m  -Wno-unused-result -Wsign-compare -g -fstack-protector-strong -Wformat -Werror=format-security  -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -g -Wall -I./include -o bin/main     
cc1plus: warning: command line option ‘-Wstrict-prototypes’ is valid for C/ObjC but not for C++
In file included from /usr/include/c++/5/random:35:0,
                 from ./include/stdafx.h:23,
                 from ./include/BSED.h:3,
                 from ./src/test.cpp:5:
/usr/include/c++/5/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support \
  ^
In file included from ./include/BSED.h:3:0,
                 from ./src/test.cpp:5:
./include/stdafx.h:69:2: warning: ‘typedef’ was ignored in this declaration
 };
  ^
In file included from ./include/graph.h:4:0,
                 from ./include/verifyGraph.h:5,
                 from ./include/treeNode.h:3,
                 from ./include/BSED.h:4,
                 from ./src/test.cpp:5:
./include/common.h: In static member function ‘static int common::unionElem(std::vector<int>&, std::vector<int>&)’:
./include/common.h:182:12: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   while (i < v1.size() && j < v2.size())
            ^
./include/common.h:182:29: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   while (i < v1.size() && j < v2.size())
                             ^
./include/common.h: In static member function ‘static bool common::equal(std::vector<int>&, std::vector<int>&)’:
./include/common.h:200:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int i = 0; i < a.size(); i++)
                     ^
In file included from ./include/verifyGraph.h:6:0,
                 from ./include/treeNode.h:3,
                 from ./include/BSED.h:4,
                 from ./src/test.cpp:5:
./include/bitmap.h: At global scope:
./include/bitmap.h:11:2: warning: ‘typedef’ was ignored in this declaration
 };
  ^
In file included from ./include/treeNode.h:3:0,
                 from ./include/BSED.h:4,
                 from ./src/test.cpp:5:
./include/verifyGraph.h: In member function ‘void verifyGraph::init(graph&)’:
./include/verifyGraph.h:71:44: warning: left shift count >= width of type [-Wshift-count-overflow]
    else this->unMappedVertex[i] = (1ULL << 64) - 1;
                                            ^
In file included from ./include/BSED.h:4:0,
                 from ./src/test.cpp:5:
./include/treeNode.h: In member function ‘int treeNode::getNumberOfAdjacentverifyGraphEdges(u8*&, std::vector<std::vector<int> >&, int)’:
./include/treeNode.h:145:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int j = 0; j < adjList[i].size(); j++)
                     ^
./include/treeNode.h: In member function ‘void treeNode::updateVertexDegree(std::vector<std::vector<int> >&, u8*, int&)’:
./include/treeNode.h:183:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int i = 0; i < adjList[pos].size(); i++)
                     ^
In file included from ./src/test.cpp:5:0:
./include/BSED.h: In constructor ‘beamItem::beamItem(int, int, PNode, PNode)’:
./include/BSED.h:22:13: warning: ‘beamItem::upper’ will be initialized after [-Wreorder]
  int lower, upper;
             ^
./include/BSED.h:21:8: warning:   ‘treeNode* beamItem::left’ [-Wreorder]
  PNode left, right;
        ^
./include/BSED.h:23:2: warning:   when initialized here [-Wreorder]
  beamItem(int l, int u, PNode lf, PNode rg) : lower(l), upper(u), left(lf), right(rg){}
  ^
./include/BSED.h: At global scope:
./include/BSED.h:29:2: warning: ‘typedef’ was ignored in this declaration
 };
  ^
./include/BSED.h: In member function ‘int BSEditDistance::determine_wdith(treeNode**, int&)’:
./include/BSED.h:152:18: warning: unused variable ‘tmp’ [-Wunused-variable]
   int count = 1, tmp;
                  ^
./include/BSED.h: In member function ‘int BSEditDistance::getEditDistance(graph&, graph&, int, std::vector<int>&, std::vector<int>&)’:
./include/BSED.h:257:7: warning: unused variable ‘tmp_wdith’ [-Wunused-variable]
   int tmp_wdith = w;
       ^
./include/BSED.h:258:8: warning: unused variable ‘flag’ [-Wunused-variable]
   bool flag = false;
        ^
./include/BSED.h: In member function ‘int BSEditDistance::getEditDistance(graph&, graph&, int)’:
./include/BSED.h:390:8: warning: unused variable ‘group1_number’ [-Wunused-variable]
    int group1_number, group2_number;
        ^
./src/test.cpp: In function ‘bool verify(const graph&, const std::vector<graph>&, int, int, std::vector<int>&)’:
./src/test.cpp:16:10: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(; i < graphDB.size();i++)
          ^
./src/test.cpp:19:16: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for(j = 0; j < queryDB.size(); j++)
                ^
./src/test.cpp: In function ‘int main(int, char**)’:
./src/test.cpp:121:10: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(; i < graphDB.size();i++)
          ^
./src/test.cpp:124:16: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for(j = 0; j < queryDB.size(); j++)
                ^
./src/test.cpp:130:8: warning: unused variable ‘ged’ [-Wunused-variable]
    int ged = ed.getEditDistance(q, g, bound);
        ^
./src/test.cpp:141:15: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(j = 0; j < queryDB.size(); j++)
               ^
./src/test.cpp:82:12: warning: unused variable ‘myInt’ [-Wunused-variable]
  PyObject* myInt = PyObject_CallObject(pv1, args);
            ^
./src/test.cpp:101:12: warning: unused variable ‘sorted’ [-Wunused-variable]
  const int sorted = 1;
            ^
./src/test.cpp:110:6: warning: unused variable ‘sum’ [-Wunused-variable]
  int sum = 0; 
      ^
In file included from ./include/BSED.h:3:0,
                 from ./src/test.cpp:5:
./include/stdafx.h: At global scope:
./include/stdafx.h:47:12: warning: ‘INSERTED’ defined but not used [-Wunused-variable]
 static int INSERTED = 253;
            ^
In file included from ./include/verifyGraph.h:5:0,
                 from ./include/treeNode.h:3,
                 from ./include/BSED.h:4,
                 from ./src/test.cpp:5:
./include/graph.h:17:15: warning: ‘order_tmp’ defined but not used [-Wunused-variable]
 static BTuple order_tmp[512];
               ^
./include/graph.h:18:15: warning: ‘order_vertex’ defined but not used [-Wunused-variable]
 static BTuple order_vertex[512];
               ^
./include/graph.h:19:12: warning: ‘vertex_degree’ defined but not used [-Wunused-variable]
 static int vertex_degree[512];
            ^
makefile:21: recipe for target 'bin/main' failed
make: *** [bin/main] Error 1
